Close memory leak

RAII fails to clean up QT's slot/signal connection, so a manual
disconnect is necessary to stop memory leaking.

BUG: 423575
FIXED-IN: 22.04.2